--- a/ms-root/ms-provider-system/pom.xml
+++ b/ms-root/ms-provider-system/pom.xml
@@ -2,16 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.train</groupId>
+	<artifactId>ms-provider-system</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>ms-provider-system</name>
+	<description>Demo project for Spring Boot</description>
+
 	<parent>
 		<groupId>com.train</groupId>
 		<artifactId>ms-root</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>com.tool</groupId>
-	<artifactId>ms-provider-system</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ms-provider-system</name>
-	<description>系统相关服务</description>
 
 	<properties>
 		<swagger2.version>2.4.0</swagger2.version>
