服务消费者

--- a/ms-root/ms-admin/pom.xml
+++ b/ms-root/ms-admin/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.train</groupId>
-	<artifactId>ms-provider-system</artifactId>
+	<artifactId>ms-admin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ms-provider-system</name>
-	<description>服务提供者</description>
+	<name>ms-admin</name>
+	<description>服务消费者（Feign）</description>
 
 	<parent>
 		<groupId>com.train</groupId>
@@ -14,27 +14,20 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<properties>
-		<swagger2.version>2.4.0</swagger2.version>
-	</properties>
-
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 
-		<!-- swagger api-->
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${swagger2.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${swagger2.version}</version>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-feign</artifactId>
 		</dependency>
 	</dependencies>
-
 </project>
