--- a/ms-root/ms-common/pom.xml
+++ b/ms-root/ms-common/pom.xml
@@ -17,6 +17,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <fastjson.version>1.2.48</fastjson.version>
+        <commons-net.version>3.6</commons-net.version>
+        <slf4j-api.version>1.7.25</slf4j-api.version>
     </properties>
 
     <dependencies>
@@ -24,6 +26,18 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>${commons-net.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
         </dependency>
     </dependencies>
 
