--- a/ms-root/ms-provider/pom.xml
+++ b/ms-root/ms-provider/pom.xml
@@ -75,17 +75,23 @@
 			<artifactId>ms-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<!--<plugin>
-				&lt;!&ndash;Mybatis-generator插件,用于自动生成Mapper和POJO&ndash;&gt;
+			<plugin>
+				<!--Mybatis-generator插件,用于自动生成Mapper和POJO-->
 				<groupId>org.mybatis.generator</groupId>
 				<artifactId>mybatis-generator-maven-plugin</artifactId>
 				<version>1.3.2</version>
 				<configuration>
-					&lt;!&ndash;配置文件的位置&ndash;&gt;
+					<!--配置文件的位置-->
 					<configurationFile>${basedir}/src/main/resources/generator/mybatis-generator-config.xml</configurationFile>
 					<verbose>true</verbose>
 					<overwrite>true</overwrite>
@@ -105,7 +111,7 @@
 						<version>1.3.2</version>
 					</dependency>
 				</dependencies>
-			</plugin>-->
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
